Cleanup Eigen et al.

--- a/Eigen_et_al.ipynb
+++ b/Eigen_et_al.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo of the Make3D dataset\n",
-    "http://make3d.cs.cornell.edu/data.html#make3d"
+    "# Eigen et al 2014\n",
+    "\n",
+    "Eigen, David, Christian Puhrsch, and Rob Fergus. \"Depth map prediction from a single image using a multi-scale deep network.\" Advances in neural information processing systems. 2014. [[Eigen2014](https://papers.nips.cc/paper/5539-depth-map-prediction-from-a-single-image-using-a-multi-scale-deep-network.pdf)]\n",
+    "\n",
+    "## Datasets: \n",
+    "- [Make3D](http://make3d.cs.cornell.edu/data.html#make3d)\n",
+    "- [NYU](http://cs.nyu.edu/~silberman/datasets/nyu_depth_v2.html)"
    ]
   },
   {
@@ -18,22 +23,22 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import scipy as sp\n",
+    "from scipy.misc import imresize\n",
     "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Make3D data\n",
     "from Make3D import train_pairs, test_pairs\n",
     "\n",
-    "#from NYU import nyu_data\n",
-    "#train_pairs, test_pairs = nyu_data()"
+    "# NYU data\n",
+    "# from NYU import nyu_data\n",
+    "# train_pairs, test_pairs = nyu_data()"
    ]
   },
   {
@@ -47,7 +52,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -57,7 +61,7 @@
     "for (rgb, d), (ax1, ax2) in zip(train_pairs[:10], axis):\n",
     "    ax1.axis('off'), ax2.axis('off')\n",
     "    ax1.imshow(rgb)\n",
-    "    ax2.imshow(sp.misc.imresize(d, rgb.shape))\n",
+    "    ax2.imshow(imresize(d, rgb.shape))\n",
     "plt.show()"
    ]
   },
@@ -81,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data, train_targets = zip(*train_pairs)\n",
@@ -92,11 +94,11 @@
     "def rgb2gray(rgb):\n",
     "    return np.dot(rgb[...,:3], [0.299, 0.587, 0.114])\n",
     "\n",
-    "train_data = [sp.misc.imresize(rgb2gray(img), (304, 228))/255 for img in train_data]\n",
-    "train_targets = [sp.misc.imresize(img, (74, 55))/255 for img in train_targets]\n",
-    "test_data = [sp.misc.imresize(rgb2gray(img), (304, 228))/255 for img in test_data]\n",
-    "test_targets = [sp.misc.imresize(img, (74, 55))/255 for img in test_targets]\n",
-    "\n",
+    "# Reshape data/targets to what the paper uses in order to use the same network.\n",
+    "train_data = [imresize(rgb2gray(img), (304, 228))/255 for img in train_data]\n",
+    "train_targets = [imresize(img, (74, 55))/255 for img in train_targets]\n",
+    "test_data = [imresize(rgb2gray(img), (304, 228))/255 for img in test_data]\n",
+    "test_targets = [imresize(img, (74, 55))/255 for img in test_targets]\n",
     "\n",
     "train_x, train_t = np.asarray(train_data), np.asarray(train_targets)\n",
     "test_x, test_t = np.asarray(test_data), np.asarray(test_targets)\n",
@@ -111,7 +113,7 @@
     "for (rgb, d), (ax1, ax2) in zip(tuples, axis):\n",
     "    ax1.axis('off'), ax2.axis('off')\n",
     "    ax1.imshow(rgb)\n",
-    "    ax2.imshow(sp.misc.imresize(d, rgb.shape))\n",
+    "    ax2.imshow(imresize(d, rgb.shape))\n",
     "plt.show()"
    ]
   },
@@ -126,18 +128,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# MODEL\n",
     "x = tf.placeholder(tf.float32, (None, 304, 228))\n",
     "t = tf.placeholder(tf.float32, (None, 74, 55))\n",
     "is_test = tf.placeholder_with_default(False, None)\n",
-    "x_ = tf.reshape(x, (-1, 304, 228, 1))\n",
     "\n",
+    "x_ = tf.reshape(x, (-1, 304, 228, 1))  # conv2d expects a channel dimension\n",
     "\n",
-    "#coarse layer implementation\n",
+    "# coarse network implementation\n",
     "coarse = tf.layers.conv2d(x_, filters=96, kernel_size=11, strides=4, activation=tf.nn.relu)\n",
     "coarse = tf.layers.max_pooling2d(coarse, pool_size=2, strides=2)\n",
     "coarse = tf.layers.conv2d(coarse, filters=256, kernel_size=5, activation=tf.nn.relu, padding='same')\n",
@@ -147,21 +148,20 @@
     "coarse = tf.layers.conv2d(coarse, filters=256, kernel_size=3, activation=tf.nn.relu, strides=2)\n",
     "coarse = tf.reshape(coarse, (-1, 8*6*256))\n",
     "coarse = tf.layers.dense(coarse, units=4096, activation=tf.nn.relu)\n",
-    "coarse = tf.layers.dropout(coarse, rate=.5, training=is_test)  #schaltet beim training neurons aus\n",
+    "coarse = tf.layers.dropout(coarse, rate=.5, training=is_test)  # kill neurons in training\n",
     "coarse = tf.layers.dense(coarse, units=(74*55))\n",
     "coarse = tf.reshape(coarse, (-1, 74, 55, 1))\n",
     "\n",
-    "\n",
-    "#fine layer implementation\n",
+    "# fine network implementation\n",
     "fine = tf.layers.conv2d(x_, filters=63, kernel_size=9, strides=2, activation=tf.nn.relu)\n",
     "fine = tf.layers.max_pooling2d(fine, pool_size=2, strides=2)\n",
-    "fine = tf.concat([fine, coarse], 3)\n",
+    "fine = tf.concat([fine, coarse], 3)  # join with coarse output\n",
     "fine = tf.layers.conv2d(fine, filters=64, kernel_size=5, activation=tf.nn.relu, padding='same')\n",
     "fine = tf.layers.conv2d(fine, filters=1, kernel_size=5, padding='same')\n",
     "\n",
-    "y = tf.squeeze(fine, axis=3)\n",
+    "y = tf.squeeze(fine, axis=3)  # remove channel dimension\n",
     "\n",
-    "loss = tf.reduce_mean(tf.square(t - y))\n",
+    "loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
     "optimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)"
    ]
   },
@@ -170,9 +170,7 @@
    "metadata": {},
    "source": [
     "## Train\n",
-    "Regularily evaluate the loss on the test data and compute test predictions when done with training.\n",
-    "\n",
-    "**10000 epochs is nothing one wants to run on the CPU.**"
+    "Regularily evaluate the loss on the test data and compute test predictions when done with training."
    ]
   },
   {
@@ -198,20 +196,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "EPOCHS = 100\n",
+    "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    for i in range(100 + 1):\n",
+    "    for i in range(1, EPOCHS + 1):\n",
     "        batch = np.random.permutation(32)\n",
     "        batch_x, batch_t = train_x[batch], train_t[batch]\n",
-    "        sess.run(optimizer, {x: batch_x, t: batch_t})\n",
-    "        if i % 1 == 0:\n",
-    "            print_progress(i, 100)\n",
+    "        sess.run(optimizer, {x: batch_x, t: batch_t, is_test:False})\n",
+    "        if i % 10 == 0:\n",
+    "            loss = sess.run(loss, {x: batch_x, t: batch_t})\n",
+    "            print_progress(i, EPOCHS, suffix='Loss: {}'.format(loss))\n",
     "    test_p = sess.run(y, {x: test_x})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To Do\n",
+    "\n",
+    "- loss function\n",
+    "- automatic early stoppage (alle 10 epochs auf test set evaluieren -> achtung overfitting)\n",
+    "- pretraining\n",
+    "- local fine scale network\n",
+    "- KITTI dataset?"
    ]
   },
   {
@@ -225,19 +237,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "triples = zip(test_x[:10], test_t[:10], test_p[:10])\n",
+    "triples = zip(test_x[:20], test_t[:20], test_p[:20])\n",
     "_, axis = plt.subplots(5, 3, figsize=(10,20))\n",
     "plt.tight_layout(), plt.gray()\n",
     "for (rgb, d, p), (ax1, ax2, ax3) in zip(triples, axis):\n",
     "    ax1.axis('off'), ax2.axis('off'), ax3.axis('off')\n",
     "    ax1.imshow(rgb)\n",
-    "    ax2.imshow(sp.misc.imresize(d, rgb.shape))\n",
-    "    ax3.imshow(sp.misc.imresize(p, rgb.shape))\n",
+    "    ax2.imshow(imresize(d, rgb.shape))\n",
+    "    ax3.imshow(imresize(p, rgb.shape))\n",
     "plt.show()"
    ]
   }
@@ -258,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
