Apply some fixes.

--- a/Eigen_et_al.ipynb
+++ b/Eigen_et_al.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "x = tf.placeholder(tf.float32, (None, 304, 228))\n",
     "t = tf.placeholder(tf.float32, (None, 74, 55))\n",
-    "is_test = tf.placeholder_with_default(False, None)\n",
+    "training = tf.placeholder_with_default(False, None)\n",
     "\n",
     "x_ = tf.reshape(x, (-1, 304, 228, 1))  # conv2d expects a channel dimension\n",
     "\n",
@@ -148,7 +148,7 @@
     "coarse = tf.layers.conv2d(coarse, filters=256, kernel_size=3, activation=tf.nn.relu, strides=2)\n",
     "coarse = tf.reshape(coarse, (-1, 8*6*256))\n",
     "coarse = tf.layers.dense(coarse, units=4096, activation=tf.nn.relu)\n",
-    "coarse = tf.layers.dropout(coarse, rate=.5, training=is_test)  # kill neurons in training\n",
+    "coarse = tf.layers.dropout(coarse, rate=.5, training=training)  # kill neurons in training\n",
     "coarse = tf.layers.dense(coarse, units=(74*55))\n",
     "coarse = tf.reshape(coarse, (-1, 74, 55, 1))\n",
     "\n",
@@ -199,17 +199,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 100\n",
+    "EPOCHS = 1000\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    for i in range(1, EPOCHS + 1):\n",
-    "        batch = np.random.permutation(32)\n",
+    "        batch = np.random.permutation(len(train_t))[:32]\n",
     "        batch_x, batch_t = train_x[batch], train_t[batch]\n",
-    "        sess.run(optimizer, {x: batch_x, t: batch_t, is_test:False})\n",
-    "        if i % 10 == 0:\n",
-    "            loss = sess.run(loss, {x: batch_x, t: batch_t})\n",
-    "            print_progress(i, EPOCHS, suffix='Loss: {}'.format(loss))\n",
+    "        sess.run(optimizer, {x: batch_x, t: batch_t, training: True})\n",
+    "        if i % 100 == 0:\n",
+    "            train_loss = sess.run(loss, {x: batch_x, t: batch_t})\n",
+    "            print_progress(i, EPOCHS, suffix='Loss: {}'.format(train_loss))\n",
     "    test_p = sess.run(y, {x: test_x})"
    ]
   },
