--- a/Eigen_et_al.ipynb
+++ b/Eigen_et_al.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Make3D data\n",
@@ -52,6 +54,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -85,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "train_data, train_targets = zip(*train_pairs)\n",
@@ -128,7 +133,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -161,7 +166,14 @@
     "\n",
     "y = tf.squeeze(fine, axis=3)  # remove channel dimension\n",
     "\n",
-    "loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
+    "#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
+    "\n",
+    "n = tf.reduce_sum(y) - tf.reduce_sum(tf.cast((t==0), tf.float32))\n",
+    "d = y - t\n",
+    "dsq = tf.square(y - t)\n",
+    "\n",
+    "loss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq) - (1/n**2) * (tf.reduce_sum(d))**2 )\n",
+    "\n",
     "optimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)"
    ]
   },
@@ -196,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "EPOCHS = 1000\n",
@@ -237,6 +251,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -251,6 +266,22 @@
     "    ax3.imshow(imresize(p, rgb.shape))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -269,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
