Track @roweiss loss changes.

--- a/Eigen_et_al.ipynb
+++ b/Eigen_et_al.ipynb
@@ -88,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data, train_targets = zip(*train_pairs)\n",
@@ -133,7 +131,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -168,11 +166,16 @@
     "\n",
     "#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
     "\n",
-    "n = tf.reduce_sum(y) - tf.reduce_sum(tf.cast((t==0), tf.float32))\n",
-    "d = y - t\n",
-    "dsq = tf.square(y - t)\n",
+    "#nr_pixel = 74*55*32.\n",
+    "#nr_missing = tf.reduce_sum(tf.cast(t==0, tf.float32))\n",
     "\n",
-    "loss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq) - (1/n**2) * (tf.reduce_sum(d))**2 )\n",
+    "#nr_missing = tf.Print(nr_missing, [nr_missing])\n",
+    "\n",
+    "n = tf.count_nonzero(y)\n",
+    "d = y - tf.log(t)\n",
+    "dsq = tf.square(d)\n",
+    "\n",
+    "loss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq, name=\"sum1\") - (1/n**2) * (tf.reduce_sum(d))**2 )\n",
     "\n",
     "optimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)"
    ]
@@ -189,7 +192,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -208,9 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "EPOCHS = 1000\n",
@@ -300,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
