change network to GAN

--- a/Eigen_et_al.ipynb
+++ b/Eigen_et_al.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,11 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'Make3D'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-9e73d4427dbc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Make3D data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mMake3D\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_pairs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_pairs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# NYU data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# from NYU import nyu_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'Make3D'"
+     ]
+    }
+   ],
    "source": [
     "# Make3D data\n",
     "from Make3D import train_pairs, test_pairs\n",
@@ -88,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_data, train_targets = zip(*train_pairs)\n",
@@ -129,42 +143,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"conv2d_95/Relu:0\", shape=(?, 70, 51, 64), dtype=float32)\n",
+      "Tensor(\"max_pooling2d_35/MaxPool:0\", shape=(?, 35, 25, 64), dtype=float32)\n",
+      "Tensor(\"conv2d_96/Relu:0\", shape=(?, 31, 21, 128), dtype=float32)\n",
+      "Tensor(\"max_pooling2d_36/MaxPool:0\", shape=(?, 15, 10, 128), dtype=float32)\n",
+      "Tensor(\"conv2d_97/Relu:0\", shape=(?, 11, 6, 256), dtype=float32)\n",
+      "Tensor(\"conv2d_98/Relu:0\", shape=(?, 7, 2, 512), dtype=float32)\n",
+      "Tensor(\"conv2d_99/Relu:0\", shape=(?, 70, 51, 64), dtype=float32)\n",
+      "Tensor(\"max_pooling2d_37/MaxPool:0\", shape=(?, 35, 25, 64), dtype=float32)\n",
+      "Tensor(\"conv2d_100/Relu:0\", shape=(?, 31, 21, 128), dtype=float32)\n",
+      "Tensor(\"max_pooling2d_38/MaxPool:0\", shape=(?, 15, 10, 128), dtype=float32)\n",
+      "Tensor(\"conv2d_101/Relu:0\", shape=(?, 11, 6, 256), dtype=float32)\n",
+      "Tensor(\"conv2d_102/Relu:0\", shape=(?, 7, 2, 512), dtype=float32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\\n\\n#nr_pixel = 74*55*32.\\n#nr_missing = tf.reduce_sum(tf.cast(t==0, tf.float32))\\n\\n#nr_missing = tf.Print(nr_missing, [nr_missing])\\n\\nn = tf.count_nonzero(y)\\nd = y - tf.log(t)\\ndsq = tf.square(d)\\n\\nloss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq, name=\"sum1\") - (1/n**2) * (tf.reduce_sum(d))**2 )\\n\\noptimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = tf.placeholder(tf.float32, (None, 304, 228))\n",
     "t = tf.placeholder(tf.float32, (None, 74, 55))\n",
     "training = tf.placeholder_with_default(False, None)\n",
-    "\n",
+    "t = tf.reshape(t, (-1, 74, 55, 1)) \n",
     "x_ = tf.reshape(x, (-1, 304, 228, 1))  # conv2d expects a channel dimension\n",
     "\n",
-    "# coarse network implementation\n",
-    "coarse = tf.layers.conv2d(x_, filters=96, kernel_size=11, strides=4, activation=tf.nn.relu)\n",
-    "coarse = tf.layers.max_pooling2d(coarse, pool_size=2, strides=2)\n",
-    "coarse = tf.layers.conv2d(coarse, filters=256, kernel_size=5, activation=tf.nn.relu, padding='same')\n",
-    "coarse = tf.layers.max_pooling2d(coarse, pool_size=2, strides=2)\n",
-    "coarse = tf.layers.conv2d(coarse, filters=384, kernel_size=3, activation=tf.nn.relu, padding='same')\n",
-    "coarse = tf.layers.conv2d(coarse, filters=384, kernel_size=3, activation=tf.nn.relu, padding='same')\n",
-    "coarse = tf.layers.conv2d(coarse, filters=256, kernel_size=3, activation=tf.nn.relu, strides=2)\n",
-    "coarse = tf.reshape(coarse, (-1, 8*6*256))\n",
-    "coarse = tf.layers.dense(coarse, units=4096, activation=tf.nn.relu)\n",
-    "coarse = tf.layers.dropout(coarse, rate=.5, training=training)  # kill neurons in training\n",
-    "coarse = tf.layers.dense(coarse, units=(74*55))\n",
-    "coarse = tf.reshape(coarse, (-1, 74, 55, 1))\n",
+    "def generator(x):\n",
+    "    # coarse network implementation\n",
+    "    coarse = tf.layers.conv2d(x, filters=96, kernel_size=11, strides=4, activation=tf.nn.relu)\n",
+    "    coarse = tf.layers.max_pooling2d(coarse, pool_size=2, strides=2)\n",
+    "    coarse = tf.layers.conv2d(coarse, filters=256, kernel_size=5, activation=tf.nn.relu, padding='same')\n",
+    "    coarse = tf.layers.max_pooling2d(coarse, pool_size=2, strides=2)\n",
+    "    coarse = tf.layers.conv2d(coarse, filters=384, kernel_size=3, activation=tf.nn.relu, padding='same')\n",
+    "    coarse = tf.layers.conv2d(coarse, filters=384, kernel_size=3, activation=tf.nn.relu, padding='same')\n",
+    "    coarse = tf.layers.conv2d(coarse, filters=256, kernel_size=3, activation=tf.nn.relu, strides=2)\n",
+    "    coarse = tf.reshape(coarse, (-1, 8*6*256))\n",
+    "    coarse = tf.layers.dense(coarse, units=4096, activation=tf.nn.relu)\n",
+    "    coarse = tf.layers.dropout(coarse, rate=.5, training=training)  # kill neurons in training\n",
+    "    coarse = tf.layers.dense(coarse, units=(74*55))\n",
+    "    coarse = tf.reshape(coarse, (-1, 74, 55, 1))\n",
     "\n",
-    "# fine network implementation\n",
-    "fine = tf.layers.conv2d(x_, filters=63, kernel_size=9, strides=2, activation=tf.nn.relu)\n",
-    "fine = tf.layers.max_pooling2d(fine, pool_size=2, strides=2)\n",
-    "fine = tf.concat([fine, coarse], 3)  # join with coarse output\n",
-    "fine = tf.layers.conv2d(fine, filters=64, kernel_size=5, activation=tf.nn.relu, padding='same')\n",
-    "fine = tf.layers.conv2d(fine, filters=1, kernel_size=5, padding='same')\n",
+    "    # fine network implementation\n",
+    "    fine = tf.layers.conv2d(x_, filters=63, kernel_size=9, strides=2, activation=tf.nn.relu)\n",
+    "    fine = tf.layers.max_pooling2d(fine, pool_size=2, strides=2)\n",
+    "    fine = tf.concat([fine, coarse], 3)  # join with coarse output\n",
+    "    fine = tf.layers.conv2d(fine, filters=64, kernel_size=5, activation=tf.nn.relu, padding='same')\n",
+    "    fine = tf.layers.conv2d(fine, filters=1, kernel_size=5, padding='same')\n",
     "\n",
-    "y = tf.squeeze(fine, axis=3)  # remove channel dimension\n",
+    "    #y = tf.squeeze(fine, axis=3)  # remove channel dimension\n",
+    "    return fine #y\n",
     "\n",
-    "#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
+    "def discriminator(x):\n",
+    "    # inputdimension is (None, 74, 55)\n",
+    "    # from http://bamos.github.io/2016/08/09/deep-completion/\n",
+    "    # other one possible but no kernel sizes from https://adeshpande3.github.io/adeshpande3.github.io/Deep-Learning-Research-Review-Week-1-Generative-Adversarial-Nets\n",
+    "    layer = tf.layers.conv2d(x, filters=64, kernel_size=5, strides=1, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.max_pooling2d(layer, pool_size=2, strides=2)\n",
+    "    layer = tf.layers.conv2d(layer, filters=128, kernel_size=5, strides=1, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.max_pooling2d(layer, pool_size=2, strides=2)\n",
+    "    layer = tf.layers.conv2d(layer, filters=256, kernel_size=5, strides=1, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.conv2d(layer, filters=512, kernel_size=5, strides=1, activation=tf.nn.relu)\n",
+    "    # start fully connected layers\n",
+    "    layer = tf.reshape(layer, (-1, 7*2*512))\n",
+    "    \n",
+    "    layer = tf.layers.dense(layer, units=256, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.dropout(layer, rate=.5, training=training)  # kill neurons in training\n",
+    "    layer = tf.layers.dense(layer, units=128, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.dense(layer, units=32, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.dense(layer, units=16, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.dense(layer, units=8, activation=tf.nn.relu)\n",
+    "    D_logit = tf.layers.dense(layer, units=1, activation=None)\n",
+    "    D_prob = tf.nn.sigmoid(D_logit)\n",
+    "    return D_prob, D_logit\n",
+    "    \n",
+    "\n",
+    "G_sample = generator(x_)\n",
+    "D_real, D_logit_real = discriminator(t)\n",
+    "D_fake, D_logit_fake = discriminator(G_sample)\n",
+    "\n",
+    "D_loss_real = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_real, labels=tf.ones_like(D_logit_real)))\n",
+    "D_loss_fake = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_fake, labels=tf.zeros_like(D_logit_fake)))\n",
+    "D_loss = D_loss_real + D_loss_fake\n",
+    "G_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_fake, labels=tf.ones_like(D_logit_fake)))\n",
+    "\n",
+    "D_solver = tf.train.AdamOptimizer().minimize(D_loss)#, var_list=theta_D)\n",
+    "G_solver = tf.train.AdamOptimizer().minimize(G_loss)\n",
+    "\n",
+    "    \n",
+    "\"\"\"#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
     "\n",
     "#nr_pixel = 74*55*32.\n",
     "#nr_missing = tf.reduce_sum(tf.cast(t==0, tf.float32))\n",
@@ -177,7 +260,7 @@
     "\n",
     "loss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq, name=\"sum1\") - (1/n**2) * (tf.reduce_sum(d))**2 )\n",
     "\n",
-    "optimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)"
+    "optimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)\"\"\""
    ]
   },
   {
@@ -211,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "EPOCHS = 1000\n",
@@ -221,7 +306,8 @@
     "    for i in range(1, EPOCHS + 1):\n",
     "        batch = np.random.permutation(len(train_t))[:32]\n",
     "        batch_x, batch_t = train_x[batch], train_t[batch]\n",
-    "        sess.run(optimizer, {x: batch_x, t: batch_t, training: True})\n",
+    "        sess.run(G_solver, {x: batch_x, t: batch_t, training: True})\n",
+    "        sess.run(D_solver, {x: batch_x, training: True})\n",
     "        if i % 100 == 0:\n",
     "            train_loss = sess.run(loss, {x: batch_x, t: batch_t})\n",
     "            print_progress(i, EPOCHS, suffix='Loss: {}'.format(train_loss))\n",
@@ -301,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
