--- a/Eigen_et_al.ipynb
+++ b/Eigen_et_al.ipynb
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -29,23 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named 'Make3D'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-9e73d4427dbc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Make3D data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mMake3D\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_pairs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_pairs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# NYU data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# from NYU import nyu_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'Make3D'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Make3D data\n",
     "from Make3D import train_pairs, test_pairs\n",
@@ -65,10 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_, axis = plt.subplots(5, 2, figsize=(10,20))\n",
@@ -100,9 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data, train_targets = zip(*train_pairs)\n",
@@ -143,47 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"conv2d_95/Relu:0\", shape=(?, 70, 51, 64), dtype=float32)\n",
-      "Tensor(\"max_pooling2d_35/MaxPool:0\", shape=(?, 35, 25, 64), dtype=float32)\n",
-      "Tensor(\"conv2d_96/Relu:0\", shape=(?, 31, 21, 128), dtype=float32)\n",
-      "Tensor(\"max_pooling2d_36/MaxPool:0\", shape=(?, 15, 10, 128), dtype=float32)\n",
-      "Tensor(\"conv2d_97/Relu:0\", shape=(?, 11, 6, 256), dtype=float32)\n",
-      "Tensor(\"conv2d_98/Relu:0\", shape=(?, 7, 2, 512), dtype=float32)\n",
-      "Tensor(\"conv2d_99/Relu:0\", shape=(?, 70, 51, 64), dtype=float32)\n",
-      "Tensor(\"max_pooling2d_37/MaxPool:0\", shape=(?, 35, 25, 64), dtype=float32)\n",
-      "Tensor(\"conv2d_100/Relu:0\", shape=(?, 31, 21, 128), dtype=float32)\n",
-      "Tensor(\"max_pooling2d_38/MaxPool:0\", shape=(?, 15, 10, 128), dtype=float32)\n",
-      "Tensor(\"conv2d_101/Relu:0\", shape=(?, 11, 6, 256), dtype=float32)\n",
-      "Tensor(\"conv2d_102/Relu:0\", shape=(?, 7, 2, 512), dtype=float32)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\\n\\n#nr_pixel = 74*55*32.\\n#nr_missing = tf.reduce_sum(tf.cast(t==0, tf.float32))\\n\\n#nr_missing = tf.Print(nr_missing, [nr_missing])\\n\\nn = tf.count_nonzero(y)\\nd = y - tf.log(t)\\ndsq = tf.square(d)\\n\\nloss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq, name=\"sum1\") - (1/n**2) * (tf.reduce_sum(d))**2 )\\n\\noptimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = tf.placeholder(tf.float32, (None, 304, 228))\n",
     "t = tf.placeholder(tf.float32, (None, 74, 55))\n",
     "training = tf.placeholder_with_default(False, None)\n",
-    "t = tf.reshape(t, (-1, 74, 55, 1)) \n",
-    "x_ = tf.reshape(x, (-1, 304, 228, 1))  # conv2d expects a channel dimension\n",
+    "t_ = tf.expand_dims(t, 3) \n",
+    "x_ = tf.expand_dims(x, 3)  # conv2d expects a channel dimension\n",
     "\n",
     "def generator(x):\n",
     "    # coarse network implementation\n",
@@ -230,13 +177,14 @@
     "    layer = tf.layers.dense(layer, units=16, activation=tf.nn.relu)\n",
     "    layer = tf.layers.dense(layer, units=8, activation=tf.nn.relu)\n",
     "    D_logit = tf.layers.dense(layer, units=1, activation=None)\n",
-    "    D_prob = tf.nn.sigmoid(D_logit)\n",
+    "    D_prob = tf.nn.sigmoid(D_logit)  # scalars between 0 and 1, 1 being its a real depthmap\n",
     "    return D_prob, D_logit\n",
     "    \n",
     "\n",
     "G_sample = generator(x_)\n",
-    "D_real, D_logit_real = discriminator(t)\n",
-    "D_fake, D_logit_fake = discriminator(G_sample)\n",
+    "discriminator_template = tf.make_template(discriminator)\n",
+    "D_real, D_logit_real = discriminator_template(t_)\n",
+    "D_fake, D_logit_fake = discriminator_template(G_sample)\n",
     "\n",
     "D_loss_real = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_real, labels=tf.ones_like(D_logit_real)))\n",
     "D_loss_fake = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=D_logit_fake, labels=tf.zeros_like(D_logit_fake)))\n",
@@ -247,20 +195,20 @@
     "G_solver = tf.train.AdamOptimizer().minimize(G_loss)\n",
     "\n",
     "    \n",
-    "\"\"\"#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
+    "#loss = tf.reduce_mean(tf.square(t - y))  # TODO: Implement loss from paper\n",
     "\n",
     "#nr_pixel = 74*55*32.\n",
     "#nr_missing = tf.reduce_sum(tf.cast(t==0, tf.float32))\n",
     "\n",
     "#nr_missing = tf.Print(nr_missing, [nr_missing])\n",
     "\n",
-    "n = tf.count_nonzero(y)\n",
-    "d = y - tf.log(t)\n",
-    "dsq = tf.square(d)\n",
+    "# n = tf.count_nonzero(y)\n",
+    "# d = y - tf.log(t)\n",
+    "# dsq = tf.square(d)\n",
     "\n",
-    "loss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq, name=\"sum1\") - (1/n**2) * (tf.reduce_sum(d))**2 )\n",
+    "# loss = tf.reduce_mean( (1/n) * tf.reduce_sum(dsq, name=\"sum1\") - (1/n**2) * (tf.reduce_sum(d))**2 )\n",
     "\n",
-    "optimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)\"\"\""
+    "# optimizer = tf.train.AdamOptimizer(0.0001).minimize(loss)"
    ]
   },
   {
@@ -274,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sys import stdout\n",
@@ -294,24 +240,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "EPOCHS = 1000\n",
     "\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    for i in range(1, EPOCHS + 1):\n",
-    "        batch = np.random.permutation(len(train_t))[:32]\n",
-    "        batch_x, batch_t = train_x[batch], train_t[batch]\n",
-    "        sess.run(G_solver, {x: batch_x, t: batch_t, training: True})\n",
-    "        sess.run(D_solver, {x: batch_x, training: True})\n",
-    "        if i % 100 == 0:\n",
-    "            train_loss = sess.run(loss, {x: batch_x, t: batch_t})\n",
-    "            print_progress(i, EPOCHS, suffix='Loss: {}'.format(train_loss))\n",
-    "    test_p = sess.run(y, {x: test_x})"
+    "gloss = 1\n",
+    "dloss = 0.99\n",
+    "\n",
+    "sess = tf.InteractiveSession()\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "for i in range(1, EPOCHS + 1):\n",
+    "    batch = np.random.permutation(len(train_t))[:32]\n",
+    "    batch_x, batch_t = train_x[batch], train_t[batch]\n",
+    "    if gloss > dloss:\n",
+    "        gloss, _, = sess.run(\n",
+    "            [G_loss, G_solver], \n",
+    "            {x: batch_x, t: batch_t, training: True},\n",
+    "        )\n",
+    "    else: \n",
+    "        dloss, _ = sess.run(\n",
+    "            [D_loss, D_solver], \n",
+    "            {x: batch_x, t: batch_t, training: True},\n",
+    "        )\n",
+    "    if i % 100 == 0:\n",
+    "        text = 'Losses: {:.4f}, {:.4f}'.format(gloss, dloss)\n",
+    "        print_progress(i, EPOCHS, suffix=text)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_p = sess.run(G_sample, {x: test_x})\n",
+    "print(sess.run([G_loss, D_loss], {x: test_x, t: test_t}))\n",
+    "test_p = np.squeeze(test_p)"
    ]
   },
   {
@@ -337,10 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "triples = zip(test_x[:20], test_t[:20], test_p[:20])\n",
@@ -364,9 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -387,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
